<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff2570a1"
            android:orientation="vertical">

            <View
                android:id="@+id/statusbar_sp"
                android:layout_width="match_parent"
                android:layout_height="25dp"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/goback"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="center"
                        android:src="@drawable/ad_left" />
                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="FAQ"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/ll_top"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:touchscreenBlocksFocus="true">

                <TextView
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:background="#FFA500" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/faqtitle"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/faqcontent"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/faq1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:touchscreenBlocksFocus="true">

                <TextView
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:background="#9ACD32" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/faqtitle1"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/faqcontent1"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/faq2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:touchscreenBlocksFocus="true">

                <TextView
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:background="#008B45" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/faqtitle2"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/faqcontent2"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
