<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff2570a1"
        android:orientation="vertical">

        <View
            android:id="@+id/statusbar_sp"
            android:layout_width="match_parent"
            android:layout_height="25dp"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.andexert.library.RippleView
                android:id="@+id/goback"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                ripple:rv_alpha="127"
                ripple:rv_color="@color/bg_gray"
                ripple:rv_rippleDuration="150"
                ripple:rv_type="doubleRipple"
                ripple:rv_zoom="true">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="center"
                    android:src="@drawable/ad_left" />
            </com.andexert.library.RippleView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/about"
                android:textColor="#fff"
                android:textSize="@dimen/textsize1" />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_top"
        android:orientation="vertical">
        
        
        
        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/versiontip"/>


        <com.andexert.library.RippleView
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:touchscreenBlocksFocus="true"
            ripple:rv_alpha="127"
            ripple:rv_color="@color/bg_gray"
            ripple:rv_rippleDuration="150"
            ripple:rv_type="rectangle"
            ripple:rv_zoom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="FAQ" />


            <View
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ad_right"></View>


        </com.andexert.library.RippleView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/linecolor"></View>


        <com.andexert.library.RippleView
            android:id="@+id/gocomment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            ripple:rv_alpha="127"
            ripple:rv_color="@color/bg_gray"
            ripple:rv_rippleDuration="150"
            ripple:rv_type="rectangle"
            ripple:rv_zoom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/givefive" />

            <View
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ad_right"></View>


        </com.andexert.library.RippleView>

    </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#aaa"
        android:layout_marginBottom="30dp"
        android:text="© 2015 lichuanyang,all rights reserved" />


</RelativeLayout>
